crates/toml_edit/tests/snapshots/invalid/ext/string/missing-quotes-in-inline-table.stderr
TOML parse error at line 1, column 16
  |
1 | name = { key = value }
  |                ^^^^^
string values must be quoted, expected literal string
